# autohanabi

./: CHANGELOG.md  LICENSE  README.md  autohanabi.cabal
.github/workflows/: ci.yml
app/: Ai.hs  Ansi.hs  Cards.hs  Game.hs  Main.hs  Vec.hs
docs/: Ai.md  Game.md  Gui.md  Vecs.md
src/: Ai.hs  Cards.hs  Game.hs  Utils.hs
test/: Main.hs
